# EVS

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/api/routes/: ingestion.py  simulation.py
app/db/: session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 001_create_tables.py  (+1 more)
app/db/models/: __init__.py  charging_session.py  ingestion_run.py  simulation.py
app/domain/schemas/: charging_session.py
app/ingestion/interfaces/: session_loader.py
app/ingestion/loaders/: __init__.py  acn_loader.py  urbanev_loader.py
app/ingestion/services/: ingestion_service.py
app/ingestion/validate/: session_validator.py
app/repositories/: charging_session_repository.py  simulation_repository.py
app/simulation/aggregation/: load_aggregator.py
app/simulation/engine/: baseline_engine.py  charging_policy.py  fleet_state.py  time_index.py
app/simulation/metrics/: baseline_metrics.py
app/simulation/schemas/: simulation_output.py
app/utils/: logging.py  time.py
tests/: conftest.py
tests/fixtures/: acn_sample.json  urbanev_sample.csv
tests/integration/: conftest.py  test_health.py  test_idempotent_upsert.py  test_ingest_acn.py  test_ingest_errors.py  test_ingest_urbanev.py
tests/unit/: test_acn_loader.py  test_loader_registry.py  test_time.py  test_urbanev_loader.py  test_validator.py
tests/unit/simulation/: test_baseline_engine.py  test_baseline_metrics.py  test_charging_policy.py  test_fleet_state.py  test_load_aggregator.py  test_time_index.py
